--- a/css/main.css
+++ b/css/main.css
@@ -100,3 +100,13 @@ font-size: 20px;
    margin-left: 70px;
    margin-bottom: 70px;
 }
+
+@media (max-width: 1000px){
+	.header-image .header1 .header2 .header-image2 {
+		/* Reverse the axis of the header, making it vertical. */
+		flex-direction: column;
+
+		/* Align items to the begining (the left) of the header. */
+		align-items: flex-start;
+	}
+}
