--- a/css/main.css
+++ b/css/main.css
@@ -1,112 +1,16 @@
-
 }
-body {
-  margin:0;
-  padding: 0;
-}
-
-#image {
-  display: block;
-  max-width: 20%;
-  border-radius: 50%;
-  margin: 0 auto;
-  margin-top: 90px;
-
-}
-
-.image2 {
-  display: block;
-  border-radius: 50%;
-  margin-left: 60px;
-}
-
-.image3 {
-  display: block;
-  margin: 30px;
-  border-radius: 2px;
-  margin-left: 60px;
-}
-.image4{
-  display: block;
-  margin: 30px;
-  border-radius: 2px;
-  margin-left: 60px;
-}
-.header-image {
-  display: block;
-  width: 100%;
-  text-align: center;
-  background: url("../images/per.jpg");
-  -webkit-background-size:cover;
-  -moz-background-size: cover;
-  background-size:cover;
-  -o-background-size:cover;
-  font-family: fantasy;
-  margin-bottom: 50px;
-  margin-top: 70px;
-  height: 350px;
-
-}
-.header-image2 {
-  display: inline-block;
-  width: 100%;
-  height: auto;
-  text-align: left;
-  color: #000;
-  margin-bottom: 40px;
-  margin-top: 40px;
-  font-weight: 900;
-}
-
-
-#title {
-  padding: 60px 0;
-  margin: 0 auto;
-  font-family: fantasy;
-  font-size: 72px;
-  color: #fff;
-}
-.header1 {
-  margin: 0 auto;
-  font-family: fantasy;
-  font-size: 45px;
-  color: #fff;
-}
-
-.header2 {
-  margin: 0 auto;
-  margin-left: 60px;
-  margin-top: 20px;
-  font-family: fantasy;
-  font-size: 42px;
-
-}
-
-.lead {
-color:#000;
-text-align: justify;
-margin-left: 60px;
-margin-right: 60px;
-font-family: fantasy;
-font-size: 20px;
-}
-.lead::first-letter {
-    font-size: 200%;
-    font-weight: 900px;
-}
-
-#career a{
-   margin-top: 40px;
-   margin-left: 70px;
-   margin-bottom: 70px;
-}
-
-@media (max-width: 1000px){
-	.header-image .header1 .header2 .header-image2 {
-		/* Reverse the axis of the header, making it vertical. */
-		flex-direction: column;
-
-		/* Align items to the begining (the left) of the header. */
-		align-items: flex-start;
-	}
+body{margin:0;padding:0;}
+#image{display:block;max-width:20%;border-radius:50%;margin:0 auto;margin-top:90px;}
+.image2{display:block;border-radius:50%;margin-left:60px;}
+.image3{display:block;margin:30px;border-radius:2px;margin-left:60px;}
+.image4{display:block;margin:30px;border-radius:2px;margin-left:60px;}
+.header-image{display:block;width:100%;text-align:center;background:url("../images/per.jpg");-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;font-family:fantasy;margin-bottom:50px;margin-top:70px;height:350px;}
+.header-image2{display:inline-block;width:100%;height:auto;text-align:left;color:#000;margin-bottom:40px;margin-top:40px;font-weight:900;}
+#title{padding:60px 0;margin:0 auto;font-family:fantasy;font-size:72px;color:#fff;}
+.header1{margin:0 auto;font-family:fantasy;font-size:45px;color:#fff;}
+.header2{margin:0 auto;margin-left:60px;margin-top:20px;font-family:fantasy;font-size:42px;}
+.lead{color:#000;text-align:justify;margin-left:60px;margin-right:60px;font-family:fantasy;font-size:20px;}
+.lead::first-letter{font-size:200%;font-weight:900px;}
+#career a{margin-top:40px;margin-left:70px;margin-bottom:70px;}
+@media (max-width:1000px){.header-image .header1 .header2 .header-image2{flex-direction:column;align-items:flex-start;}
 }
